--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "js-cookie": "^3.0.5",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
+    "qs": "^6.11.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
@@ -27,6 +29,7 @@
     "@types/jsdom": "^21.1.1",
     "@types/node": "^18.17.5",
     "@types/nprogress": "^0.2.0",
+    "@types/qs": "^6.9.8",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vue/eslint-config-prettier": "^8.0.0",
