--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "js-cookie": "^3.0.5",
