--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@iconify-json/carbon": "^1.1.21",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/js-cookie": "^3.0.3",
@@ -47,6 +48,7 @@
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vitest": "^0.34.2",
