--- a/package.json
+++ b/package.json
@@ -24,8 +24,12 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
+    "@iconify-json/bxs": "^1.1.7",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/clarity": "^1.1.9",
+    "@iconify-json/icomoon-free": "^1.1.5",
+    "@iconify-json/solar": "^1.1.3",
+    "@iconify-json/vaadin": "^1.1.6",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/js-cookie": "^3.0.3",
