--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@iconify-json/icomoon-free": "^1.1.5",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/mi": "^1.1.5",
+    "@iconify-json/mingcute": "^1.1.9",
     "@iconify-json/solar": "^1.1.3",
     "@iconify-json/vaadin": "^1.1.6",
     "@rushstack/eslint-patch": "^1.3.2",
