--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@iconify-json/bxs": "^1.1.7",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/clarity": "^1.1.9",
+    "@iconify-json/heroicons": "^1.1.12",
     "@iconify-json/icomoon-free": "^1.1.5",
     "@iconify-json/mdi": "^1.1.54",
     "@iconify-json/mi": "^1.1.5",
     "@iconify-json/mingcute": "^1.1.9",
+    "@iconify-json/ph": "^1.1.6",
     "@iconify-json/solar": "^1.1.3",
     "@iconify-json/vaadin": "^1.1.6",
     "@rushstack/eslint-patch": "^1.3.2",
