--- a/package.json
+++ b/package.json
@@ -56,9 +56,11 @@
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.29",
     "prettier": "^3.0.0",
+    "sass": "^1.67.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
     "unplugin-auto-import": "^0.16.6",
+    "unplugin-element-plus": "^0.8.0",
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
