--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "element-plus": "^2.3.12",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
@@ -40,6 +41,7 @@
     "@tsconfig/node18": "^18.2.0",
     "@types/js-cookie": "^3.0.3",
     "@types/jsdom": "^21.1.1",
+    "@types/lodash": "^4.14.198",
     "@types/node": "^18.17.5",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.8",
