--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
+    "rtc-streamer": "^0.2.2",
     "vue": "^3.3.4",
     "vue-i18n": "9",
     "vue-router": "^4.2.4"
