--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "element-plus": "^2.3.12",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "maptalks": "1.0.0-rc.25",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "qs": "^6.11.2",
@@ -43,6 +44,7 @@
     "@types/js-cookie": "^3.0.3",
     "@types/jsdom": "^21.1.1",
     "@types/lodash": "^4.14.198",
+    "@types/maptalks": "^0.49.3",
     "@types/node": "^18.17.5",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.8",
