--- a/index.conf
+++ b/index.conf
@@ -8,6 +8,15 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://119.91.145.64:8081/api/;
+        proxy_pass http://host.docker.internal:8081/api/;
     }
+
+    location /websocket {
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_set_header Host $host;
+      proxy_pass http://host.docker.internal:8081/websocket;
+    }
+
 }
