--- a/index.conf
+++ b/index.conf
@@ -8,7 +8,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://host.docker.internal:8081/api/;
+        proxy_pass http://127.0.0.1:8081/api/;
     }
 
     location /websocket {
@@ -16,7 +16,14 @@ server {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_set_header Host $host;
-      proxy_pass http://host.docker.internal:8081/websocket;
+      proxy_pass http://127.0.0.1:8081/websocket/;
     }
 
+    location /tiles/ {
+        proxy_pass http://127.0.0.1:3000/tiles/;
+    }
+    
+    location /rtc/ {
+        proxy_pass http://127.0.0.1:1985/rtc/;
+    }
 }
