--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
+    "echarts": "^5.4.3",
     "element-plus": "^2.3.12",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
