--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@iconify-json/bxs": "^1.1.7",
     "@iconify-json/carbon": "^1.1.21",
     "@iconify-json/clarity": "^1.1.9",
+    "@iconify-json/dashicons": "^1.1.8",
     "@iconify-json/heroicons": "^1.1.12",
     "@iconify-json/icomoon-free": "^1.1.5",
     "@iconify-json/mdi": "^1.1.54",
