--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -8,6 +8,6 @@
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["unplugin-icons/types/vue"]
+    "types": ["unplugin-icons/types/vue", "./node_modules/element-plus/global"]
   }
 }
