refactor: 提取工具栏组件

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -1,12 +1,18 @@
 {
   "extends": "@vue/tsconfig/tsconfig.dom.json",
-  "include": ["env.d.ts", "src/**/*", "src/**/*.vue", "src/**/*.json"],
+  "include": [
+    "env.d.ts",
+    "src/**/*",
+    "src/**/*.vue",
+    "src/**/*.json",
+    "node_modules/unplugin-icons/types/vue.d.ts"
+  ],
   "compilerOptions": {
     "composite": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     },
-    "types": ["unplugin-icons/types/vue", "./node_modules/element-plus/global"]
+    "types": ["./node_modules/element-plus/global"]
   }
 }
