--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "unplugin-icons": "^0.17.0",
     "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
+    "vite-plugin-eslint": "^1.8.1",
     "vitest": "^0.34.2",
     "vue-tsc": "^1.8.8"
   }
