--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "vite --host",
     "build": "run-s type-check test:unit build-only",
     "preview": " vite preview",
-    "test:unit": "vitest run --coverage",
+    "test:unit": "vitest run",
+    "test": "vitest --coverage",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
