test: 组件单侧示例

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,7 +6,8 @@
     "src/**/*.vue",
     "src/**/*.json",
     "node_modules/unplugin-icons/types/vue.d.ts",
-    "__tests__"
+    "__tests__",
+    "vitest.setup.ts"
   ],
   "compilerOptions": {
     "composite": true,
