--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "run-s type-check test:unit build-only",
     "preview": " vite preview",
     "test:unit": "vitest run",
-    "test": "vitest --coverage",
+    "test": "vitest --ui",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
@@ -55,9 +55,10 @@
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vitest/coverage-v8": "^1.4.0",
+    "@vitest/ui": "^1.4.0",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^11.0.3",
-    "@vue/test-utils": "^2.4.1",
+    "@vue/test-utils": "^2.4.5",
     "@vue/tsconfig": "^0.4.0",
     "autoprefixer": "^10.4.15",
     "eslint": "^8.46.0",
