--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@types/node": "^18.17.5",
     "@types/nprogress": "^0.2.0",
     "@types/qs": "^6.9.8",
+    "@types/w3c-web-serial": "^1.0.6",
     "@vitejs/plugin-vue": "^4.3.1",
     "@vitejs/plugin-vue-jsx": "^3.0.2",
     "@vitest/coverage-v8": "^1.4.0",
