--- a/index.conf
+++ b/index.conf
@@ -1,6 +1,9 @@
 server {
-    listen       80;
+    listen 443 ssl;
     server_name  localhost;
+
+    ssl_certificate /root/ssl/ssl.crt;
+    ssl_certificate_key /root/ssl/ssl.key;
 
     location / {
         root   /usr/share/nginx/html;
@@ -8,7 +11,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://127.0.0.1:8081/api/;
+        proxy_pass http://192.168.18.233:8081/api/;
     }
 
     location /websocket {
@@ -16,11 +19,11 @@ server {
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection "upgrade";
       proxy_set_header Host $host;
-      proxy_pass http://127.0.0.1:8081/websocket/;
+      proxy_pass http://192.168.18.233:8081/websocket/;
     }
 
     location /tiles/ {
-        proxy_pass http://127.0.0.1:3000/tiles/;
+        proxy_pass http://192.168.18.233:3000/tiles/;
     }
     
     location /rtc/ {
