--- a/package.json
+++ b/package.json
@@ -31,18 +31,7 @@
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
-    "@iconify-json/bxs": "^1.1.7",
-    "@iconify-json/carbon": "^1.1.21",
-    "@iconify-json/clarity": "^1.1.9",
-    "@iconify-json/dashicons": "^1.1.8",
-    "@iconify-json/heroicons": "^1.1.12",
-    "@iconify-json/icomoon-free": "^1.1.5",
-    "@iconify-json/mdi": "^1.1.54",
-    "@iconify-json/mi": "^1.1.5",
-    "@iconify-json/mingcute": "^1.1.9",
-    "@iconify-json/ph": "^1.1.6",
-    "@iconify-json/solar": "^1.1.3",
-    "@iconify-json/vaadin": "^1.1.6",
+    "@iconify/vue": "^4.1.2",
     "@rushstack/eslint-patch": "^1.3.2",
     "@tsconfig/node18": "^18.2.0",
     "@types/js-cookie": "^3.0.3",
@@ -71,10 +60,6 @@
     "sass": "^1.67.0",
     "tailwindcss": "^3.3.3",
     "typescript": "~5.1.6",
-    "unplugin-auto-import": "^0.16.6",
-    "unplugin-element-plus": "^0.8.0",
-    "unplugin-icons": "^0.17.0",
-    "unplugin-vue-components": "^0.25.2",
     "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
     "vitest": "^1.4.0",
