--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "typescript": "~5.1.6",
     "vite": "^4.4.9",
     "vite-plugin-eslint": "^1.8.1",
+    "vite-plugin-vue-devtools": "^7.2.1",
     "vitest": "^1.4.0",
     "vue-tsc": "^1.8.8"
   }
