--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vite --host",
     "build": "run-s type-check test:unit build-only",
     "preview": " vite preview",
-    "test:unit": "vitest run",
+    "test:unit": "vitest",
     "test": "vitest --ui",
     "build-only": "vite build",
     "type-check": "vue-tsc --noEmit -p tsconfig.vitest.json --composite false",
@@ -23,7 +23,7 @@
     "lodash": "^4.17.21",
     "maptalks": "1.0.0-rc.25",
     "nprogress": "^0.2.0",
-    "pinia": "^2.1.6",
+    "pinia": "^2.1.7",
     "qs": "^6.11.2",
     "rtc-streamer": "^0.2.2",
     "vue": "^3.3.4",
